@@ -17,6 +17,7 @@ common.disabled=disabled
 common.info=Info
 common.warning=Warning
 common.error=Error
+common.ok=OK
 
 # SportsTracker data classes
 st.intensity.minimum=minimum
@@ -290,6 +291,7 @@ st.dlg.note.text.text=Text:
 st.dlg.note.ok.Action.text=OK
 st.dlg.note.cancel.Action.text=Cancel
 st.dlg.note.error.date=You need to enter a valid date!
+st.dlg.note.error.time=You need to enter a valid time!
 st.dlg.note.error.no_text=You need to enter a text!
 
 # Weight dialog
