@@ -15,6 +15,7 @@ common.disabled=nicht aktiv
 common.info=Info
 common.warning=Warnung
 common.error=Fehler
+common.ok=OK
 
 # SportsTracker data classes
 st.intensity.minimum=minimal
@@ -289,6 +290,7 @@ st.dlg.note.text.text=Text:
 st.dlg.note.ok.Action.text=OK
 st.dlg.note.cancel.Action.text=Abbrechen
 st.dlg.note.error.date=Das angegebene Datum ist nicht korrekt!
+st.dlg.note.error.time=Die angegebene Zeit ist nicht korrekt!
 st.dlg.note.error.no_text=Sie m\u00fcssen einen Text eingeben!
 
 # Weight dialog
